# dachterasse

./: .gitignore  Cargo.toml  README.md
dachterasse/: Cargo.toml
dachterasse/src/: lib.rs  main.rs
dachterasse/src/asynch/lectures/: datasource.rs  repository.rs  scrape.rs
dachterasse/src/asynch/lectures/sources/: memory_source.rs  scraper_source.rs
dachterasse/src/lectures/: client.rs  config.rs  datasource.rs  entities.rs  repository.rs  scrape.rs
dachterasse/src/lectures/sources/: filesystem_source.rs  memory_source.rs  scraper_source.rs
dachterasse_server/: .gitignore  Cargo.toml  Shuttle.toml  schema.sql
dachterasse_server/src/: database.rs  lib.rs  server.rs
src/: lib.rs  load.rs  main.rs  scrape.rs
src/asynch/lectures/: datasource.rs  repository.rs
src/asynch/lectures/sources/: memory_source.rs  scraper_source.rs
src/client/: repository.rs  scrape.rs
src/lectures/: cache.rs  client.rs  config.rs  datasource.rs  entities.rs  load.rs  repository.rs  scrape.rs
src/lectures/sources/: memory_source.rs  scraper_source.rs
