[package]
name = "dachterasse"
version = "0.1.2"
edition = "2021"
description = "A crate for scraping the HPI lecture overview site"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
futures = "0.3.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.57"
async-std = "1.12.0"
