[package]
name = "dachterasse_server"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
dachterasse = { version = "0.1.4", path = "../dachterasse"}
rocket = { version = "^0.5.0-rc.2", features = ["json"]}
rocket_modules = "0.1.1"
shuttle-service = { version = "0.8.0", features = ["web-rocket"]}
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"]}
serde = "1.0"
shuttle-shared-db = { version = "0.8.0", features = ["postgres"] }

[dependencies.serde_derive]
version = "1.0"
